# lazyclaude

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  setup.sh
src/: app.rs  config.rs  lib.rs  main.rs
src/app/: actions.rs  event_loop.rs  keys.rs  mod.rs  mouse.rs  navigation.rs  resolve.rs  search.rs
src/sources/: agents.rs  claude_md.rs  commands.rs  hooks.rs  keybindings.rs  mcp.rs  mcp_registry.rs  memory.rs  mod.rs  plugin_registry.rs  plugins.rs  projects.rs  sessions.rs  settings.rs  skills.rs  skills_registry.rs  stats.rs  todos.rs
src/ui/: dashboard.rs  detail.rs  help.rs  markdown.rs  mod.rs  search_view.rs  stats_view.rs  theme.rs  views.rs
tests/: discovery.rs
