[package]
name = "lazyclaude"
version = "0.1.0"
edition = "2021"
description = "A lazygit-inspired TUI for managing Claude Code configuration"
license = "MIT"
repository = "https://github.com/idohaber/lazyclaude"
homepage = "https://github.com/idohaber/lazyclaude"
readme = "README.md"
keywords = ["claude", "claude-code", "tui", "config", "manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
arboard = "3"
fuzzy-matcher = "0.3"
notify = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
